syntax = "proto3";

option go_package="./;protobuf";

package protobuf;

message LogEntry{
    uint64 Index=1;
    uint64 Term=2;
    string CommandName=3;
    optional bytes Command=4; // for nop-command
}